@@ -2,6 +2,8 @@
   * sv.c: service name is also relative to the current directory if it
     ends with a slash.
   * change default directory for services from /var/service/ to /service/.
+  * runsv.c: create temporary new status files for log/supervise/ actually
+    in log/supervise/.
 
 1.8.0
 Fri, 21 Sep 2007 00:33:56 +0000
